# MageFramework

./: .gitignore  CMakeLists.txt  INSTRUCTION.md  LICENSE  README.md  TodoDetails.md
src/: CMakeLists.txt
src/Assets/Scenes/: emptyScene.json  gltfTestDuck.json  gltfTestSponza.json  gltfTest_box.json  gltfTest_gltf_and_obj.json  objTestChalet.json  partyanimals.json
src/GraphicsPlayground/: Model.cpp  Model.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  UIManager.cpp  UIManager.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInitializers.h  VulkanInstance.cpp  VulkanInstance.h  camera.cpp  camera.h  forward.h  global.h  main.cpp  pipelineManager.cpp  pipelineManager.h  postProcessManager.cpp  postProcessManager.h  renderPassManager.cpp  renderPassManager.h  texture.cpp  texture.h  utility.h  vulkanDevices.cpp  vulkanDevices.h  vulkanPresentation.cpp  vulkanPresentation.h
src/GraphicsPlayground/SceneElements/: clouds.h  model.cpp  model.h  texture.cpp  texture.h  time.cpp
src/GraphicsPlayground/Shaders/: Tonemap.frag  geometryPlain.vert  testComputeShader.comp  testShader.frag  testShader.vert
src/GraphicsPlayground/Utilities/: bufferUtility.h  commandUtility.h  descriptorUtility.h  deviceUtility.h  generalUtility.h  imageUtility.h  loadingUtility.cpp  pipelineUtility.h  renderUtility.h  shaderUtility.h  stbUtility.h  swapChainUtility.h  vulkanInitializers.h
src/GraphicsPlayground/Vulkan/: vulkanManager.cpp  vulkanManager.h  vulkanRendererBackend.cpp  vulkanRendererBackend.h
src/GraphicsPlayground/Vulkan/RendererBackend/: vRendererBackend.cpp  vRendererBackend.h  vRendererBackend_Commands.inl  vRendererBackend_Pipelines.inl  vRendererBackend_PostProcess.inl  vRendererBackend_RenderPasses.inl
src/GraphicsPlayground/Vulkan/Utilities/: vBufferUtil.h  vCommandUtil.h  vDeviceUtil.h  vImageUtil.h  vRenderUtil.h  vShaderUtil.h
src/GraphicsPlayground/VulkanSetup/: vulkanDevices.cpp  vulkanDevices.h  vulkanInstance.cpp  vulkanInstance.h  vulkanPresentation.h
src/MageFramework/: Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  UIManager.cpp  UIManager.h  camera.cpp  camera.h  forward.h  global.h  main.cpp
src/MageFramework/ForwardDeclaration/: rayTracingForward.h  renderforward.h  vulkanForward.h
src/MageFramework/SceneElements/: grass.cpp  model.cpp  model.h  modelForward.cpp  modelForward.h  texture.cpp  texture.h
src/MageFramework/Shaders/: HighResTestPass1.frag  LowResTestPass1.frag  LowResTestPass2.frag  Tonemap.frag  compositeComputeOntoRaster.frag  geometryPlain.frag  screenSpaceQuad_VS.vert  testShader.frag
src/MageFramework/Shaders/Common/: geometryPlain.frag  geometryPlain.vert
src/MageFramework/Shaders/NotInUse/: geometryPlain_OnlyBaseColor.frag
src/MageFramework/Shaders/PostProcessEffects/: HighResTestPass1.frag  HighResTestPass2.frag  LowResTestPass2.frag  TXAA.frag
src/MageFramework/Shaders/RayTracing/: global.glsl  ray_closestHit.rchit  ray_generation.rgen  ray_miss.rmiss  shadows_closestHit.rchit  shadows_miss.rmiss  utility.glsl
src/MageFramework/Shaders/RayTracing_NotInUse/: ray_closestHit.rchit  ray_generation.rgen
src/MageFramework/Shaders/RayTracing_NotInUse/basic/: ray_closestHit_basic.rchit  ray_generation_basic.rgen  ray_miss_basic.rmiss
src/MageFramework/Utilities/: generalUtility.h  loadingUtility.cpp  loadingUtility.h  loadingUtilityForward.h  stbUtility.h  timerUtility.h
src/MageFramework/Vulkan/: vulkanManager.cpp  vulkanManager.h
src/MageFramework/Vulkan/RendererBackend/: vAccelerationStructure.cpp  vAccelerationStructure.h  vRendererBackend.cpp  vRendererBackend.h  vRendererBackend_Commands.inl  vRendererBackend_Pipelines.inl  vRendererBackend_PostProcess.inl  vRendererBackend_Rasterization.inl  vRendererBackend_RayTracing.inl  vRendererBackend_RenderPasses.inl
src/MageFramework/Vulkan/Utilities/: vAccelerationStructureUtil.h  vBufferUtil.h  vCommandUtil.h  vDescriptorUtil.h  vImageUtil.h  vPipelineUtil.h  vRayTracingUtil.h  vRenderUtil.h  vShaderUtil.h
src/ShaderPlayground/: VulkanInstance.cpp  VulkanInstance.h  global.h  main.cpp
